unpackaged/main/default/objects/Case/fields/SDO_Service_Agent_Interactions__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Agent_Interactions__c</fullName>
    <label>Agent Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>