unpackaged/main/default/objects/Case/fields/SDO_Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Cost__c</fullName>
    <description>What: used in reports</description>
    <formula>Case ( Origin, &#39;Phone&#39;, 3.5, &#39;Chat&#39;, 2, &#39;Email&#39;, 2, &#39;Website&#39;, 1.5, &#39;Portal&#39;, 1.5, &#39;Chatter Answer&#39;, 1.2, 1.75)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>