unpackaged/main/default/objects/Case/fields/SDO_Service_Customer_Effort_Score__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Customer_Effort_Score__c</fullName>
    <label>Customer Effort Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>