unpackaged/main/default/objects/Case/fields/SDO_Service_Email_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Email_Response_Time__c</fullName>
    <label>Email Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>