unpackaged/main/default/objects/Case/fields/SDO_Service_Escalated__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>