unpackaged/main/default/objects/Case/fields/SDO_Service_Percent_vs_Last_Change__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Percent_vs_Last_Change__c</fullName>
    <label>Percent vs Last Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>