unpackaged/main/default/objects/Case/fields/SDO_Service_Propensity_Change_Direction__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Propensity_Change_Direction__c</fullName>
    <label>Propensity Change Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>