unpackaged/main/default/objects/Case/fields/SDO_Service_Propensity_Improvement_1__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Propensity_Improvement_1__c</fullName>
    <label>Propensity Improvement 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>