unpackaged/main/default/objects/Case/fields/SDO_Service_Propensity_Improvement_2_Val__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Propensity_Improvement_2_Val__c</fullName>
    <label>Propensity Improvement 2 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>