unpackaged/main/default/objects/Case/fields/SDO_Service_Propensity_Percentage__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Propensity_Percentage__c</fullName>
    <label>Propensity Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>