unpackaged/main/default/objects/Case/fields/SDO_Service_Propensity_Predictor_1_Value__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Propensity_Predictor_1_Value__c</fullName>
    <label>Propensity Predictor 1 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>