unpackaged/main/default/objects/Case/fields/SDO_Service_Propensity_Predictor_3__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Propensity_Predictor_3__c</fullName>
    <label>Propensity Predictor 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>