unpackaged/main/default/objects/Case/fields/SDO_Service_Propensity_to_Escalate__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Propensity_to_Escalate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Propensity to Escalate</label>
    <type>Checkbox</type>
</CustomField>