unpackaged/main/default/objects/Case/fields/SDO_Service_PTE_Score_Lower_Threshold__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_PTE_Score_Lower_Threshold__c</fullName>
    <label>PTE Score Lower Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>