unpackaged/main/default/objects/Case/fields/SDO_Service_Speed_to_Answer__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Speed_to_Answer__c</fullName>
    <label>Speed to Answer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>