unpackaged/main/default/objects/Case/recordTypes/SDO_Service_Case.recordType-meta.xml
<RecordType>
    <fullName>SDO_Service_Case</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>Primary case record type used for most cases.</description>
    <label>Case</label>
</RecordType>