unpackaged/main/default/objects/Case/listViews/SDO_Experience_My_Open_Cases.listView-meta.xml
<ListView>
    <fullName>SDO_Experience_My_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Cases</label>
    <sharedTo>
        <allCustomerPortalUsers />
        <allPartnerUsers />
    </sharedTo>
</ListView>