unpackaged/main/default/objects/Case/listViews/SDO_Service_Battery_Case.listView-meta.xml
<ListView>
    <fullName>SDO_Service_Battery_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Battery</label>
    <queue>SDO_Service_Battery</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>