unpackaged/main/default/objects/Case/listViews/SDO_Service_Billing_Case.listView-meta.xml
<ListView>
    <fullName>SDO_Service_Billing_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Billing</label>
    <queue>SDO_Service_Billing</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>