unpackaged/main/default/objects/Case/listViews/SDO_Service_General_Case.listView-meta.xml
<ListView>
    <fullName>SDO_Service_General_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>General</label>
    <queue>SDO_Service_General</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>