unpackaged/main/default/objects/Case/listViews/SDO_Service_Priority_Case.listView-meta.xml
<ListView>
    <fullName>SDO_Service_Priority_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Priority</label>
    <queue>SDO_Service_Priority</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>