unpackaged/main/default/objects/Case/listViews/SDO_Service_Social_Queue_Case.listView-meta.xml
<ListView>
    <fullName>SDO_Service_Social_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Social_Queue</label>
    <queue>SDO_Service_Social_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>