unpackaged/main/default/objects/Case/listViews/SDO_Service_Turbine_Case.listView-meta.xml
<ListView>
    <fullName>SDO_Service_Turbine_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Turbine</label>
    <queue>SDO_Service_Turbine</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>