unpackaged/main/default/objects/Case/listViews/SDO_Service_Warranty_Case.listView-meta.xml
<ListView>
    <fullName>SDO_Service_Warranty_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Warranty</label>
    <queue>SDO_Service_Warranty</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>